Fix volunteer shifts page and fix sub request userShift deletion issue

--- a/src/app/VolunteerNavView/Homepage/page.module.css
+++ b/src/app/VolunteerNavView/Homepage/page.module.css
@@ -377,7 +377,7 @@
 /* Header section */
 .tableHeader {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 0.5fr;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 0.5fr;
   background-color: #C6E3F9;
   border-radius: 0.5rem;
   margin: 1rem 2rem 0 2rem;
@@ -407,7 +407,7 @@
 
 .tableRow {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 0.5fr;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 0.5fr;
   align-items: center;
   min-height: 3rem;
   color: #072B68;
